# transfer-media

./: .gitignore  README.md  compare.sh  label.sh  main.py  organize.sh  pyproject.toml  script.sh  transfer.sh
tests/: test_detect_existing_different_file.py  test_detect_existing_file.py  test_simple_copy.py  test_simple_organize.py
transfer_media/: main.py
