[tool.poetry]
name = "transfer-media"
version = "0.0.1"
description = "Transfer files from camera to storage"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "transfer_media"}]

[tool.poetry.dependencies]
python = "^3.7"
exif = "^1.6.0"
ffmpeg-python = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
