[tool.poetry]
name = "transfer-media"
version = "0.0.1"
description = "Transfer files from camera to storage"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "transfer_media"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-s"  # Always show stdout

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
